Some improvements to datatable: align headers right when property is of type 'number' and alignment fixes.

--- a/csComp/includes/css/csStyles.scss
+++ b/csComp/includes/css/csStyles.scss
@@ -902,7 +902,7 @@ body,
     padding-left: 15px;
 }
 
-@media (min-width: 992px ) {
+@media (min-width: 768px ) {
     .datatable-download-large {
         display: inline-block!important;
     }
@@ -911,7 +911,7 @@ body,
     }
 }
 
-@media (max-width: 992px ) {
+@media (max-width: 768px ) {
     .datatable-download-large {
         display: none!important;
     }
@@ -954,7 +954,7 @@ body,
 }
 .table-return {
     width: 100%;
-    height: 50px;
+    height: 30px;
     padding: 0px 20px;
 }
 .legendTable {
@@ -3117,8 +3117,32 @@ input[type="checkbox"] {
 .csweb-tooltip-padding {
     padding: 8px;
     background: white;
+    box-shadow: 0px 0px 8px 0px rgba(16, 16, 16, 0.5);
 }
 
+.no-padding {
+    padding: 0;
+}
+
+.no-border {
+    border: none;
+}
+
+.table-condensed > tbody > tr > th {
+    padding: 8px 5px 16px;
+    border: none;
+    white-space: nowrap;
+}
+
+.table-condensed > tbody > tr > td {
+    border-bottom: 1px solid #ccc;
+}
+
+.table-horiz-scroll {
+    overflow-x: auto;
+    display: block;
+    width: 100%;
+}
 
 /* Overrule icons in menu */
 .mapIcon {
